--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,4 +6,10 @@
     <title>Portfólio</title>
 </head>
 
+<body>
+    <h1>Isso é um título</h1>
+    <p>Isso é um parágrafo</p>
+    <img src="html.png" alt="Logo do HTMKL5">
+</body>
+
 </html>
